--- a/src/templates/lady/assets/css/com_jshopping/default.css
+++ b/src/templates/lady/assets/css/com_jshopping/default.css
@@ -186,3 +186,10 @@
 }
 /**/
 
+.outlined {
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    line-height: 50px;
+}
