Updated home page, fixed routes of items in search page.

--- a/src/templates/lady/assets/css/com_jshopping/cart.css
+++ b/src/templates/lady/assets/css/com_jshopping/cart.css
@@ -41,7 +41,7 @@
     margin-bottom: 0;
 }
 
-.jshop-topbar .icon-shopping-cart {
+.page-header .icon-shopping-cart {
     line-height: 44px !important;
     margin-right: 30px !important;
 }
