--- a/src/templates/lady/assets/css/com_jshopping/product.css
+++ b/src/templates/lady/assets/css/com_jshopping/product.css
@@ -21,16 +21,16 @@
 
 .details-container .pane-header {
     /*border-top: 1px solid #333;*/
-    border-bottom: 1px solid #333;
-    line-height: 60px;
+    border-bottom: 1px solid #cccccc;
+    line-height: 25px;
     display: block;
-    padding: 5px 0 5px 0;
+    padding: 0 0 20px 0;
     margin: 0 0 15px 0;
 }
 
 .details-container .prod_price {
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
     line-height: 60px;
     font-size: 38px;
     display: block;
