--- a/src/templates/lady/assets/css/template.css
+++ b/src/templates/lady/assets/css/template.css
@@ -234,6 +234,7 @@ a.btn-success {
     margin-top: 20px;
     display: block;
     overflow: hidden;
+    float: left;
 }
 
 .page-header .category-title .icon {
