--- a/src/templates/yomayka/assets/css/com_users/products.css
+++ b/src/templates/yomayka/assets/css/com_users/products.css
@@ -9,7 +9,6 @@
     overflow: hidden;
     float: left;
     margin-bottom: 30px;
-    text-align: center;
 }
 
 #yoshop-products-list .item .inner {
@@ -17,38 +16,22 @@
     display: block;
     position: relative;
     border: 1px solid #bed5e8;
-    padding: 15px;
+    padding: 5px 15px;
     background: #fcfcfc;
     box-shadow: 0 0 1px #DAE7F2;
     border-radius:4px;
 }
 
-#yoshop-products-list .item .inner.inactive {
-}
-
 #yoshop-products-list .item .image {
-    width: 150px;
-    height: 120px;
-    line-height: 120px;
+    width: 130px;
+    height: 110px;
+    line-height: 105px;
     text-align: center;
     display: block;
     position: relative;
     float: left;
-}
-
-#yoshop-products-list .item .cpanel {
-    width: 150px;
-    height: 120px;
-    display: block;
-    position: relative;
-    float: right;
-    text-align: right;
-}
-
-#yoshop-products-list .item .cpanel label.btn {
-    padding-top: 2px;
-    padding-bottom: 2px;
-    width: 40px;
+    background: #eef0ff;
+    border-radius: 4px;
 }
 
 #yoshop-products-list .item .image img {
@@ -56,23 +39,39 @@
     max-height: 100%;
 }
 
+#yoshop-products-list .item .cpanel {
+    width: 174px;
+    height: 110px;
+    display: block;
+    position: relative;
+    float: right;
+}
+
+#yoshop-products-list .item .cpanel .buttons {
+    text-align: right;
+}
+
+#yoshop-products-list .item .cpanel .stats {
+    font-size: 12px;
+    margin-top: 5px;
+
+}
+
 @media (min-width: 640px) {
 
     #yoshop-products-list .item.grid-3col-item0 {
-        width: 31.8%;
-        margin-right:1.5%;
-        text-align: left;
+        width: 31.3%;
+        margin-right:2%;
     }
 
     #yoshop-products-list .item.grid-3col-item1 {
-        width: 30.3%;
-        margin: 0 1.5%
+        width: 31.3%;
+        margin: 0 1%
     }
 
     #yoshop-products-list .item.grid-3col-item2 {
-        width: 31.8%;
-        margin-left:1.5%;
-        text-align: right;
+        width: 31.3%;
+        margin-left: 2%;
     }
 
 }
@@ -103,12 +102,11 @@
     }
 }
 
-#yoshop-products-list .item .cpanel .title {
+#yoshop-products-list .item .title {
     font-family: 'Open Sans';
     font-size: 14px;
-    text-align: center;
-    margin: 10px 0 0 0;
     color: #555555;
     font-weight: 100;
     text-shadow: 1px 0 1px #ddd;
+    height:24px;
 }
