--- a/src/templates/yomayka/html/com_yoshop/category/category.css
+++ b/src/templates/yomayka/html/com_yoshop/category/category.css
@@ -75,18 +75,17 @@
 }
 
 #yoshop-products-list.tiles .item .image {
-    width: 100%;
-    height: 100%;
-    line-height: 100%;
+    width: 168px;
+    height: 168px;
+    line-height: 168px;
     text-align: center;
-    display: inline-block;
+    display: block;
     position: relative;
 }
 
 #yoshop-products-list.tiles .item .image img {
-    width: 100%;
+    max-width: 100%;
     max-height: 100%;
-    vertical-align: middle;
 }
 
 @media (min-width: 1200px) {
