--- a/src/templates/yomayka/html/com_yoshop/product.css
+++ b/src/templates/yomayka/html/com_yoshop/product.css
@@ -107,3 +107,12 @@
         margin-top: 20px;
     }
 }
+
+
+/** Edit ----------------- */
+
+#jform-fields li {
+    float: left;
+    list-style: none;
+}
+
