--- a/src/administrator/components/com_yoshop/models/forms/product.xml
+++ b/src/administrator/components/com_yoshop/models/forms/product.xml
@@ -47,13 +47,28 @@
         <field
                 name="state"
                 type="list"
-                label="JSTATUS"
-                description="JFIELD_PUBLISHED_DESC"
+                label="YOSHOP_CONDITION_STATUS"
+                description="YOSHOP_CONDITION_STATUS_DESC"
                 class="inputbox"
                 size="1"
                 default="1">
             <option value="1">JPUBLISHED</option>
             <option value="0">JUNPUBLISHED</option>
+        </field>
+        <field
+                name="condition"
+                type="list"
+                label="YOSHOP_CONDITION"
+                description="YOSHOP_CONDITION_DESC"
+                class="inputbox"
+                size="1"
+                default="4">
+            <option value="1">YOSHOP_CONDITION_1</option>
+            <option value="2">YOSHOP_CONDITION_2</option>
+            <option value="3">YOSHOP_CONDITION_3</option>
+            <option value="4">YOSHOP_CONDITION_4</option>
+            <option value="5">YOSHOP_CONDITION_5</option>
+            <option value="6">YOSHOP_CONDITION_NEW</option>
         </field>
 
         <!--<field name="created_by" type="createdby" default=""-->
