--- a/src/templates/yomayka/html/com_yoshop/product.css
+++ b/src/templates/yomayka/html/com_yoshop/product.css
@@ -57,19 +57,21 @@
     margin-right: 10px;
 }
 
+#wrapper-carousel {
+    width: 570px;
+    height: 570px;
+    border: 1px solid #bed5e8;
+    padding: 15px;
+    float: left;
+    border-radius: 4px;
+}
+
 #yoshop-product .carousel {
-    width: 50%;
-    min-height: 450px;
+    width: 540px;
+    height: 540px;
     margin: 0;
     padding: 0;
     border: none;
-    float: left;
-    background: #ffffff;
-}
-
-#yoshop-product .carousel.fullwidth {
-    width: auto;
-    float: none;
 }
 
 @media (max-width:979px) {
@@ -81,19 +83,22 @@
 }
 
 #yoshop-product .carousel-inner .item a {
-    height: 100%;
     display: block;
     text-align: center;
-    line-height: 450px;
+    line-height: 540px;
+    width: 540px;
+    height: 540px;
 }
 
 #yoshop-product .carousel-inner .item a img {
+    max-width: 100%;
+    max-height: 100%;
     display: inline-block;
-    /*height: 100%;*/
+    border-radius: 4px;
 }
 
 #yoshop-product .carousel .carousel-control {
-    top: 48%;
+    background: none !important;
 }
 
 #yoshop-product .share {
