--- a/src/templates/yomayka/assets/css/template.css
+++ b/src/templates/yomayka/assets/css/template.css
@@ -77,6 +77,14 @@ form {
     }
 }
 
+#apex #pos-apex-right .module {
+    float: left;
+    margin: 0 0 0 20px;
+}
+
+#apex #pos-apex-right .modtype-mod_yoshop_cart .btn {
+    border-radius: 32px;
+}
 
 #non-footer {
     padding-bottom: 100px;
